@@ -3,9 +3,7 @@ package chapter7.variantb.task1;
 import java.util.*;
 
 public  class Punctuation extends SentenceElement {
-    public static final List<String> punctuationList = new ArrayList<>(Arrays.asList(",", ".", ":", ";",
-            "(",")","?", "!", "-", "\""));
-
+    public static final List<String> punctuationList = List.of(",", ".", ":", ";", "(", ")", "?", "!", "-", "\"");
     protected Punctuation(String punctuation) {
         super(punctuation);
     }
